--- a/First period/HTMLeCSS/Atividade 2/style.css
+++ b/First period/HTMLeCSS/Atividade 2/style.css
@@ -131,7 +131,16 @@ body {
     color: #87500c;
 }
 
+.map {
+    color: #2c761d;
+    margin-top: -40%;
+    margin-left: 36%;
+}
 
+.video {
+    color: #2c761d;
+    margin-top: -20.3%;
+}
 
 
 
