--- a/First-period/HTMLeCSS/College_Project/teste-navbar-responsiva/style.css
+++ b/First-period/HTMLeCSS/College_Project/teste-navbar-responsiva/style.css
@@ -41,5 +41,12 @@ a {
 
 .hero {
     height: calc(100vh - 70px);
-    background: center/cover no-repeat url('https://images.unsplash.com/photo-1634173943943-3e3e3e3e3e3e');
+    background: center/cover no-repeat url(bg.jpg);
+}
+
+.seta {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
 }
