--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
@@ -2,3 +2,239 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: #5d5d5d;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*BARRA SUPERIOR*/
+.top-container {
+    position: fixed;
+    background-color: #3e3e3e;
+    border: 1px solid #5d5d5d;
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    gap: 20px;
+    z-index: 2;
+}
+
+/*Linhas de divisão*/
+.top-container hr {
+    border: 1px solid #00bf635b;
+    height: 25px;
+}
+
+/*A Href*/
+.top-container a {
+    border-radius: 0.6rem;
+    color: #d0d0d0;
+    width: 180px;
+    height: 1.4rem;
+    padding: 2px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    margin-right: 1px;
+}
+
+.top-container a:hover {
+    background-color: #7c7c7c;
+    transition: all 0.2s;
+}
+
+.top-container span {
+    color: #00BF63;
+}
+
+/*Input Pesquisar em Conteúdo*/
+.top-container input {
+    background-color: #5d5d5d;
+    height: 1.8rem;
+    width: 15rem;
+    border: none;
+    border-radius: 0.6rem;
+    padding-left: 5%;
+    color: #fff;
+}
+
+.top-container input:hover {
+    background-color: #767676;
+    transition: all 0.2s;
+}
+
+::placeholder {
+    color: #d0d0d0;
+    font-weight: 600;
+}
+
+/*CONTAINER CONTEUDO*/
+.content-container {
+    background-color: transparent;
+    position: absolute;
+    z-index: 1;
+    width: 71em;
+    height: 36.8em;
+    right: 0;
+    top: 2.7em;
+    text-align: center;
+}
+
+.content-container h1 {
+    margin-top: 1em;
+    color: #ffffff;
+}
+
+.content-container img {
+    background-color: #fff;
+    border-radius: 2em;
+    box-shadow: 0 0 7px rgb(0, 0, 0.15);
+    margin: 2em;
+}
+
+.content-container p {
+    font-size: 1.5em;
+    color: #fff;
+}
+
+.content-container span {
+    color: #00BF63;
+    font-weight: 600;
+}
+
+/*NAVBAR ESQUERDA*/
+.leftnavbar-container {
+    background-color: #3e3e3e;
+    border: 1px solid #5d5d5d;
+    position: fixed;
+    top: 2.55rem;
+    width: 14rem;
+    height: 37rem;
+    padding-left: 2px;
+    display: flex;
+    flex-direction: column;
+}
+
+#home-href {
+    width: 70px;
+    height: 15px;
+    padding: 8px;
+    padding-left: 20px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+/*A Href Navbar*/
+.leftnavbar-container a {
+    position: relative;
+    border-radius: 0.3rem;
+    color: #d0d0d0;
+    width: 80%;
+    height: 15px;
+    padding: 8px;
+    padding-left: 20px;
+    font-size: 15px;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.leftnavbar-container a:hover {
+    background-color: #767676;
+    transition: all 0.2s;
+}
+
+.leftnavbar-container h4 {
+    width: 70%;
+    height: 3%;
+    font-size: 1.03em;
+}
+
+.leftnavbar-container span {
+    padding-right: 5px;
+    color: #00BF63;
+    font-weight: 600;
+}
+
+.subject-label {
+    margin-left: 10px;
+    display: inline-block;
+}
+
+/*Materias*/
+.subject-folder,
+.subject {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+    position: relative;
+    border-radius: 0.3rem;
+    color: #d0d0d0;
+    background-color: transparent;
+    border: none;
+    width: 85%;
+    padding: 8px;
+    padding-left: 20px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.subject:hover {
+    background-color: #767676;
+    transition: all 0.2s;
+}
+
+/*Conteudos*/
+.content {
+    padding-left: 35px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.content a {
+    padding: 2px;
+}
+
+.content.show {
+    display: block;
+}
+
+.subject-folder {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+}
+
+.content {
+    display: none;
+    padding-left: 10px;
+    overflow: hidden;
+}
+
+.subject-folder button {
+    background: none;
+    border: none;
+    font-size: inherit;
+    color: inherit;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 0;
+}
+
+.subject-folder button::before {
+    content: "\25B6";
+    margin-right: 5px;
+    color: #00BF63;
+}
+
+.subject-folder.expanded button::before {
+    content: "\25BC";
+}
