--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
@@ -82,11 +82,55 @@ body {
     right: 0;
     top: 2.7em;
     text-align: center;
+    font-size: 1em;
+    margin-left: 36%;
+    margin-top: 2%;
+    justify-content: center;
 }
 
 .content-container h1 {
     margin-top: 1em;
-    color: #ffffff;
+    color: #00BF63;
+}
+
+.campo {
+    margin-bottom: 0.5em;
+}
+
+input select textarea button {
+
+    border-radius: 5px;
+}
+
+.campo label {
+    margin-bottom: 0.2em;
+    color: #00BF63;
+    display: block;
+}
+
+.campo input [type="text"] .campo input[type="email"] .campo select .campo textarea {
+    padding: 0.2em;
+    border: 1px solid #00BF63;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    display: block;
+}
+
+.campo select option {
+    padding-right: 1em;
+}
+
+.campo input:focus .campo select:focus .campo textarea:focus {
+    background: #e0e0f8;
+}
+
+.botao {
+    font-size: 1.2em;
+    background: #fff;
+    border: 0;
+    margin-bottom: 1em;
+    color: #00BF63;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .content-container img {
@@ -94,11 +138,16 @@ body {
     border-radius: 2em;
     box-shadow: 0 0 7px rgb(0, 0, 0.15);
     margin: 2em;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    position: absolute;
+
 }
 
 .content-container p {
-    font-size: 1.5em;
-    color: #fff;
+    font-size: 1.4em;
+    color: #cac5c5;
+    width: 60rem;
+    margin-left: 10%;
 }
 
 .content-container span {
