--- a/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.css
+++ b/First-period/HTMLeCSS/College_Project/Content/disciplina-2/conteudo-2.css
@@ -118,7 +118,7 @@ body {
     border: 1px solid #5d5d5d;
     position: fixed;
     top: 2.55rem;
-    width: 14rem;
+    width: 10rem;
     height: 37rem;
     padding-left: 2px;
     display: flex;
@@ -243,4 +243,7 @@ body {
 
 .subject-folder.expanded button::before {
     content: "\25BC";
+}
+.leftnavbar-container label {
+    font-size: 1.20em;
 }
