--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
@@ -74,18 +74,17 @@ body {
 
 /*CONTAINER CONTEUDO*/
 .content-container {
-    background-color: transparent;
     position: absolute;
     z-index: 1;
-    width: 71em;
-    height: 36.8em;
-    right: 0;
+    width: 58em;
+    height: 38.8em;
+    left: 15%;
     top: 2.7em;
     text-align: center;
     font-size: 1em;
-    margin-left: 36%;
-    margin-top: 2%;
     justify-content: center;
+    border: 2px solid #00BF63;
+    background-color: rgba(247, 247, 247, 0);
 }
 
 .content-container h1 {
@@ -131,6 +130,10 @@ input select textarea button {
     color: #00BF63;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    top: 90%;
+    left: 10%;
+    margin-top: 1%;
+    transform: translate(-50%, -50%);
 }
 
 .content-container img {
@@ -140,14 +143,16 @@ input select textarea button {
     margin: 2em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     position: absolute;
-
+    left: 10%;
+    /* Reduzindo a margem esquerda */
 }
 
 .content-container p {
     font-size: 1.4em;
     color: #cac5c5;
     width: 60rem;
-    margin-left: 10%;
+    margin-left: 0;
+    /* Reduzindo a margem esquerda */
 }
 
 .content-container span {
@@ -161,7 +166,7 @@ input select textarea button {
     border: 1px solid #5d5d5d;
     position: fixed;
     top: 2.55rem;
-    width: 14rem;
+    width: 10rem;
     height: 37rem;
     padding-left: 2px;
     display: flex;
@@ -194,6 +199,10 @@ input select textarea button {
 .leftnavbar-container a:hover {
     background-color: #767676;
     transition: all 0.2s;
+}
+
+.leftnavbar-container label {
+    font-size: 1.20em;
 }
 
 .leftnavbar-container h4 {
