--- a/First-period/HTMLeCSS/College_Project/Content/engSoftware.css
+++ b/First-period/HTMLeCSS/College_Project/Content/engSoftware.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #5d5d5d;
+    background-color: #1c1c1c;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -238,6 +238,7 @@ body {
 .subject-folder.expanded button::before {
     content: "\25BC";
 }
+
 .leftnavbar-container label {
     font-size: 1.20em;
 }
