--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #5d5d5d;
+    background-color: #1c1c1c;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -84,7 +84,7 @@ body {
     font-size: 1em;
     justify-content: center;
     border: 2px solid #00BF63;
-    background-color: rgba(247, 247, 247, 0);
+    background-color: rgba(117, 114, 114, 0.379);
 }
 
 .content-container h1 {
