--- a/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/style.css
@@ -74,19 +74,77 @@ body {
 
 /*CONTAINER CONTEUDO*/
 .content-container {
-    background-color: transparent;
     position: absolute;
     z-index: 1;
-    width: 71em;
-    height: 36.8em;
-    right: 0;
+    width: 58em;
+    height: 44.8em;
+    left: 15%;
     top: 2.7em;
     text-align: center;
+    font-size: 1em;
+    justify-content: center;
+    border: 4px solid #00BF63;
+    background-color: rgba(117, 114, 114, 0.379);
 }
 
 .content-container h1 {
     margin-top: 1em;
-    color: #ffffff;
+    color: #00BF63;
+}
+
+.campo {
+    margin-bottom: 0.5em;
+}
+
+input select textarea button {
+
+    border-radius: 5px;
+}
+
+.campo label {
+    margin-bottom: 0.2em;
+    color: #00BF63;
+    display: block;
+}
+
+.campo input [type="text"] .campo input[type="email"] .campo select .campo textarea {
+    padding: 0.2em;
+    border: 1px solid #00BF63;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    display: block;
+}
+
+.campo select option {
+    padding-right: 1em;
+}
+
+.campo input:focus .campo select:focus .campo textarea:focus {
+    background: #e0e0f8;
+}
+
+.campo input[type="text"],
+.campo input[type="email"],
+.campo select,
+.campo textarea {
+    width: 40%;
+    padding: 0.5em;
+    margin-bottom: 1em;
+}
+
+
+.botao {
+    font-size: 1.2em;
+    background: #fff;
+    border: 0;
+    margin-bottom: 1em;
+    color: #00BF63;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    top: 50%;
+    left: 50%;
+    margin-top: 1%;
+    transform: translate(-50%, -50%);
+    margin-left: 20%;
 }
 
 .content-container img {
@@ -94,11 +152,18 @@ body {
     border-radius: 2em;
     box-shadow: 0 0 7px rgb(0, 0, 0.15);
     margin: 2em;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 10%;
+
 }
 
 .content-container p {
-    font-size: 1.5em;
-    color: #fff;
+    font-size: 1.4em;
+    color: #cac5c5;
+    width: 56rem;
+    margin-left: 0;
+    height: 6rem;
 }
 
 .content-container span {
@@ -145,6 +210,10 @@ body {
 .leftnavbar-container a:hover {
     background-color: #767676;
     transition: all 0.2s;
+}
+
+.leftnavbar-container label {
+    font-size: 1.20em;
 }
 
 .leftnavbar-container h4 {
@@ -237,8 +306,4 @@ body {
 
 .subject-folder.expanded button::before {
     content: "\25BC";
-}
-
-.leftnavbar-container label {
-    font-size: 1.20em;
 }
