--- a/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
+++ b/First-period/HTMLeCSS/College_Project/Content/solicitar-conteudo/style.css
@@ -77,13 +77,13 @@ body {
     position: absolute;
     z-index: 1;
     width: 58em;
-    height: 38.8em;
+    height: 58.8em;
     left: 15%;
     top: 2.7em;
     text-align: center;
     font-size: 1em;
     justify-content: center;
-    border: 2px solid #00BF63;
+    border: 4px solid #00BF63;
     background-color: rgba(117, 114, 114, 0.379);
 }
 
@@ -122,6 +122,16 @@ input select textarea button {
     background: #e0e0f8;
 }
 
+.campo input[type="text"],
+.campo input[type="email"],
+.campo select,
+.campo textarea {
+    width: 40%;
+    padding: 0.5em;
+    margin-bottom: 1em;
+}
+
+
 .botao {
     font-size: 1.2em;
     background: #fff;
@@ -130,10 +140,11 @@ input select textarea button {
     color: #00BF63;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    top: 90%;
-    left: 10%;
+    top: 50%;
+    left: 50%;
     margin-top: 1%;
     transform: translate(-50%, -50%);
+    margin-left: 10%;
 }
 
 .content-container img {
@@ -144,15 +155,15 @@ input select textarea button {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 10%;
-    /* Reduzindo a margem esquerda */
+
 }
 
 .content-container p {
     font-size: 1.4em;
     color: #cac5c5;
-    width: 60rem;
+    width: 56rem;
     margin-left: 0;
-    /* Reduzindo a margem esquerda */
+    height: 6rem;
 }
 
 .content-container span {
