--- a/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/4kresolution.css
+++ b/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/4kresolution.css
@@ -32,14 +32,15 @@ body {
 .top-container a {
     border-radius: 0.6rem;
     color: #d0d0d0;
-    width: 180px;
-    height: 1.4rem;
+    width: 20%;
+    height: 4.4rem;
     padding: 2px;
     text-decoration: none;
     text-align: center;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 150%;
     margin-right: 1px;
+    margin-top: 2%;
 }
 
 .top-container a:hover {
@@ -55,11 +56,12 @@ body {
 .top-container input {
     background-color: #5d5d5d;
     height: 1.8rem;
-    width: 15rem;
+    width: 20rem;
     border: none;
     border-radius: 0.6rem;
     padding-left: 5%;
     color: #fff;
+    font-size: 150%;
 }
 
 .top-container input:hover {
@@ -76,8 +78,8 @@ body {
 .content-container {
     position: absolute;
     z-index: 1;
-    width: 58em;
-    height: 44.8em;
+    width: 120em;
+    height: 84.8em;
     left: 15%;
     top: 2.7em;
     text-align: center;
@@ -149,8 +151,8 @@ input select textarea button {
 }
 
 .botao:hover {
-    background-color: #00BF63; 
-    color: #fff; 
+    background-color: #00BF63;
+    color: #fff;
 }
 
 .content-container img {
@@ -183,8 +185,8 @@ input select textarea button {
     border: 1px solid #5d5d5d;
     position: fixed;
     top: 2.55rem;
-    width: 10rem;
-    height: 37rem;
+    width: 15rem;
+    height: 87rem;
     padding-left: 2px;
     display: flex;
     flex-direction: column;
