--- a/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/tablet.css
+++ b/First-period/HTMLeCSS/College_Project/Content/avaliar-conteudo/tablet.css
@@ -76,9 +76,9 @@ body {
 .content-container {
     position: absolute;
     z-index: 1;
-    width: 18%;
-    height: 44.8em;
-    left: 15%;
+    width: 60%;
+    height: 48.8em;
+    left: 25%;
     top: 2.7em;
     text-align: center;
     font-size: 1em;
@@ -94,6 +94,7 @@ body {
 
 .campo {
     margin-bottom: 0.5em;
+    margin-top: 9%;
 }
 
 input select textarea button {
@@ -144,7 +145,7 @@ input select textarea button {
     left: 50%;
     margin-top: 1%;
     transform: translate(-50%, -50%);
-    margin-left: 20%;
+    margin-left: 37%;
     transition: background-color 0.3s ease;
 }
 
@@ -167,9 +168,10 @@ input select textarea button {
 .content-container p {
     font-size: 1.4em;
     color: #cac5c5;
-    width: 56rem;
+    width: 28rem;
     margin-left: 0;
     height: 6rem;
+    margin-top: -8%;
 }
 
 .content-container span {
