--- a/First-period/HTMLeCSS/Atividade-3/pag3.css
+++ b/First-period/HTMLeCSS/Atividade-3/pag3.css
@@ -1,42 +1,213 @@
 *{
     margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
-#container {
+.container {
     width: 750px;
     margin: 0 auto;
+    }
+
+header{
+    background-color: #294c71;
+    background-image: url(/First-period/HTMLeCSS/Atividade-3/images/fundo.png);
+    height: 14.5rem;
+    display: flex;
 }
 
-.header-container{
-    background-color: #294c71;
-}
-.logo{
+.logo {
+    position: relative;
+    margin-top: 20px;
     text-indent: -3000px;
-    margin-left: 26%;
+    z-index: 1000;
+}
+
+.mapa{
+    position: relative;
+    z-index: 0;
+    margin-top: -10rem;
+    margin-left: 560px;
+}
+
+.fundo-cidade{
+    position: absolute;
 }
 
 .navbar-container{
-    display: flex;
+    position: relative;
+    margin-top: 30px;
+    z-index: 1000;
     background-color: #b10333;
-    justify-content: center;
-    margin-left: 1;
+    width: 625px;
+    height: 40px;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.navbar-container a{
-    margin: 0 10px;
+.navbar-item{
+    font-size: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 18px;
+    padding-right: 18px;
     color: #fff;
     text-decoration: none;
 }
 
-.fotos{
+.selecao{
     background-color: #e50040;
 }
 
-.mapa{
-    margin-left: 60%;
+.navbar-item:hover{
+    background-color: #e50040;
+}
+
+.background{
+    background-image: url(/First-period/HTMLeCSS/Atividade-3/images/fundo-caixa.png);
+}
+
+.entrevistas-container{
+    position: relative;
+    padding: 4px;
+    width: 10em;
+}
+
+.entrevistas-container h4{
+    background-color: #294c71;
+    padding-left: 3px;
+    color: #fff;
+}
+
+.entrevistas-container ul{
+    background-color: #fff;
+    margin-top: 6px;
+    list-style: none;
+    padding: 0;
+}
+
+.entrevistas-container li{
+    padding: 5px;
+    border-bottom: 2px solid #f3f3f3;
+    font-size: 14px;
+}
+
+.destaque-container{
+    position: relative;
+    padding: 4px;
+    width: 750px;
+    float: right;
+    margin-top: 1.2rem;
+}
+
+.destaque-container h4{
+    background-color: #294c71;
+    padding-left: 3px;
+    color: #fff;
+    margin-bottom: 0.6em;
+}
+
+.legislacao-container{
+    margin:4px;
+    background-color: #fff;
+}
+
+.legislacao-container h5{
+    background-color: #b10333;
+    width: 9em;
+    color: #fff;
+    text-align: center;
+}
+
+.legislacao-container img{
+    width: 740px;
+    border: 3px solid #a1a1a1;
+}
+
+.legislacao-container a{
+    color: #b10333;
+}
+
+.mundo-container{
+    position: relative;
+    margin-top: 1em;
+    padding: 4px;
+    width: 750px;
+    float: right;
+    
+}
+
+.mundo-container h4{
+    background-color: #294c71;
+    padding-left: 3px;
+    color: #fff;
+    margin-bottom: 0.6em;
+}
+
+hr{
+    margin-top: 0.5em;
+}
+
+.mundo-flex{
+    margin-top: 0.5em;
+    display: flex;
+}
+
+.mundo-flex img{
+    width: 6em;
+    margin-right: 0.4em;
+}
+
+.mundo-flex h5{
+    color: #294c71;
+}
+
+.mundo-flex p{
+    font-size: 13px;
+}
+
+.news-container{
+    background-image: url(/First-period/HTMLeCSS/Atividade-3/images/fundo-caixa.png);
+    position: relative;
+    padding: 4px;
+    width: 10em;
+}
+
+.news-container h4{
+    background-color: #294c71;
+    padding-left: 3px;
+    color: #fff;
+}
+
+.news-container form{
+    background-color: #fff;
+    margin-top: 6px;
+    padding: 0;
+}
+
+.news-container input{
+    width: 80%;
+}
+
+.news-container a{
+    background-color: #b10333;
+    color: #fff;
+    text-decoration: none;
+    font-size: 13px;
+    padding: 4px;
+}
+
+.footer-container{
+    background-color: #294c71;
+    color: #fff;
+    font-size: 18px;
+    margin-top: 25rem;
+    height: 4rem;
+    width: 100%;
+    align-content: center;
 }
